--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>NONOGRAMS UEEEE</h1>
+    <h1>Nonograms</h1>
 
     <div class="nonogram-grid"></div>
 
